kube.yaml
# This is a Kubernetes deployment, I use it on k3s
# when testing use this for a cli overview of the pdf-to-ipp namespace
# watch -n 2 'kubectl get all ; kubectl top pods'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-to-ipp-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdf-to-ipp-container
  strategy: 
     type: RollingUpdate
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pdf-to-ipp-container
    spec:
      containers:
        - name: pdf-to-ipp-container
          image: aapjeisbaas/pdf-to-ipp:latest
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "500m"
          ports:
          - containerPort: 5000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: pdf-to-ipp-service
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 5000
    name: tcp
  selector:
    app: pdf-to-ipp-container
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pdf-to-ipp-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: pdf-to-ipp.thuis
    http:
      paths:
      - path: /
        backend:
          serviceName: pdf-to-ipp-service
          servicePort: 80
